# csa-share-management

./: .coveragerc  .env  .gitignore  .pylintrc  .travis.yml  CODEOWNERS  Procfile  README.md  app.py  conftest.py  create_database.py  import_shares.py  make_db.py  makeuser.py  manage.py  models.py  pyproject.toml  requirements-heroku.txt  requirements.dev.txt  requirements.txt  setup.cfg  solawi.py  test.sh  test_commands.py  test_controller.py  test_factories.py  test_helpers.py  test_models.py  test_views.py  update.py
.github/: dependabot.yml
.github/workflows/: linters.yml  pytest.yml
migrations/: utils.py
migrations/sql/: get_expected_today_1.sql  get_expected_today_2.sql  get_expected_today_3.sql
migrations/versions/: 07468e9f0233_.py  1750dc339155_add_station.py  1aa290efdeaf_add_added_by.py  1b57ec4416e2_add_active_field_to_users.py  1e4efa50f006_initial_migration.py  236c477a1a2f_improve_expected_today_calculation_if_.py  362ad377bf0f_add_ignore_to_deposit.py  39cbdaf5dcb6_add_expected_today.py  3abef02994a2_mark_fields_non_nullable.py  3d3dfb1686e8_expected_today_as_decimal.py  3e031fc645ae_use_numeric_for_deposits.py  446bd5b15bf2_add_fields_to_share.py  503c0deffad6_add_member_model.py  56a234140efd_extract_bets.py  5cc85b66507f_add_user.py  ad3c46de6430_expected_today_year_fix.py  b17d4b60c238_do_not_return_negative_expected_amounts.py  b23e7c4c8bce_add_authentication.py  bad0fbb450c4_remember_when_password_was_changed.py  c0de89fb178b_.py  ccbd861dc9ff_fill_null_fields.py  d7e58ce0ffec_handle_null_titles_in_deposits.py  db09552d8be0_create_members_from_share_names.py  e515c374708a_turn_bet_datetimtes_into_dates.py  f9279763be97_create_postgres_method_for_getting_.py  f92f33bd3b4a_set_bet_fields_not_nullable.py
reporting/: Einzahlungen-Solawi.sql  Kautionen-Solawi.sql  delete_archived_data.sql
solawi/: __init.py  __init__.py  api.py  app.py  commands.py  controller.py  fints_import.py  models.py  old_app.py  views.py
solawi/templates/: bets.html  details.html  index.html  share_details.html
templates/: bets.html  details.html  index.html  share_details.html  upload.html
