[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "(^/migrations/.*$)"

[tool.isort]
profile = "black"
py_version = 39
line_length = 100
skip_glob = "/migrations/*"

[tool.poetry]
name = "csa-share-management"
version = "0.1.0"
description = "Small internal tool for managing monthly deposits in a community supported agriculture group"
authors = ["Knut Hühne <knut@k-nut.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
Flask-Bcrypt = "*"
Flask-Cors = "*"
Flask-JWT-Extended = "*"
Flask-Migrate = "*"
Flask-SQLAlchemy = "*"
psycopg2 = "*"
simplejson = "*"
fints = "3.0.1"
gevent = "*"
gunicorn = "*"
sentry-sdk = {extras = ["flask", "sqlalchemy"], version = "*"}
python-dateutil = "*"
Flask-Pydantic = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
factory-boy = "*"
pytest-cov = "*"
pytest-watch = "*"
isort = "*"
flake8 = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
